--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -9,10 +9,8 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <!-- <title>The News Paper - News & Lifestyle Magazine Template</title> -->
-    <!-- <title><%= //title   %></title> -->
-    <title><%= (typeof title != 'undefined' ? title : '') %></title>
-
+    <title>The News Paper - News & Lifestyle Magazine Template</title>
+    
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
 
